changed result structure

--- a/c_dispersion/Makefile
+++ b/c_dispersion/Makefile
@@ -1,14 +1,14 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -O3 -fopenmp -pthread
-SRC = pcg/pcg_basic.c simulation.h simulation.c graphs/*.c graphs/graphs.h
+SRC = pcg/pcg_basic.c simulation.h simulation.c graphs/*.c graphs/graphs.h utils/utils.h utils/*.c
 
 all: distribution process
 
 distribution:
-	$(CC) $(CFLAGS) $(SRC) distribution.c -o distribution -lm
+	$(CC) $(CFLAGS) $(SRC) distribution.c -o distribution.out -lm
 
 process:
-	echo "Hello process"
+	$(CC) $(CFLAGS) $(SRC) unhappy_process.c -o unhappy_process.out -lm
 
 test:
 	echo "test"
