--- a/c_dispersion/Makefile
+++ b/c_dispersion/Makefile
@@ -4,10 +4,10 @@ SRC = pcg/pcg_basic.c simulation.h simulation.c graphs/*.c graphs/graphs.h utils
 
 all: distribution process
 
-distribution:
+distribution: $(SRC) distribution.c
 	$(CC) $(CFLAGS) $(SRC) distribution.c -o distribution.out -lm
 
-process:
+process: $(SRC) unhappy_process.c
 	$(CC) $(CFLAGS) $(SRC) unhappy_process.c -o unhappy_process.out -lm
 
 test:
